--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
@@ -36,11 +36,13 @@
 			}
 
 			/deep/ button.search-panel-button-left {
+				padding: 9px 11px 8px 0px;
 				border-top-left-radius: @status-bar-panel-radius;
 				border-bottom-left-radius: @status-bar-panel-radius;
 			}
 
 			/deep/ button.search-panel-button-right {
+				padding: 9px 11px 8px 0px;
 				border-top-right-radius: @status-bar-panel-radius;
 				border-bottom-right-radius: @status-bar-panel-radius;
 			}
