--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -23,6 +23,7 @@
 			border-top-left-radius: @status-bar-panel-radius;
 			margin-right: 1px;
 			padding: 6.5px;
+			//padding: 10px 11px 5px 0px;
 			user-select: none;
 		}
 
@@ -31,8 +32,8 @@
 			margin: 0 1px;
 
 			/deep/ button.search-panel-button {
-				padding: 5px 11px 5px 0px;
 				background: @status-bar-panels;
+				//height: 30px;
 
 				&.active {
 					background-color: @status-bar-active;
