--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -22,7 +22,7 @@
 			border-bottom-left-radius: @status-bar-panel-radius;
 			border-top-left-radius: @status-bar-panel-radius;
 			margin-right: 1px;
-			padding: 6.5px;
+			padding: 9px;
 			user-select: none;
 		}
 
@@ -31,8 +31,10 @@
 			margin: 0 1px;
 
 			/deep/ button.search-panel-button {
-				padding: 5px 11px 5px 0px;
+				margin-top: 1px;
 				background: @status-bar-panels;
+				padding: 5px 11px 5px 0px;
+				height: 35px;
 
 				&.active {
 					background-color: @status-bar-active;
