Integrating with the address service (#3016)
* Integrating with the address service

* testing

* removing unnecessary code

* changing the url to the addresses service to the one from the comfig

* refactor after cr

* updating production.tmpl

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1505,5 +1505,8 @@
   "anaglyphConfig": {
   	"getStereoUrl": "needed test",
   	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
-  }
+  },
+  "addressService": {
+      "url": "assets/config/addresses.json"
+    }
 }
