Feat new location picker (#3044)
* ui

* start ux

* ux

* ux working

* fixed width

* testing

* clean up

* clean up code

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -27,22 +27,22 @@
 	<!-- Geo filter -->
 	<div class="box" id="editGeoFilter">
 
-		<ansyn-combo-box
-			[buttonClass]="'search-panel-button'"
-			direction="top"
-			name="GeoFilter"
-			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.geoFilter | translate"
-			[withArrow]="false"
-			[alwaysChange]="true"
-			icon="icon icon-status-bar-geo small"
-			[ngModel]="geoFilterTitle"
-			(ngModelChange)="geoFilterChanged($event)">
+		<button ansynComboBoxTrigger
+				#locationPickerTrigger
+				(click)="toggleLocationPicker()"
+				[attr.tooltip-value]="statusBarConfig?.toolTips?.geoFilter | translate"
+				[isActive]="locationPickerExpand"
+				[withArrow]="false"
+				icon="icon icon-status-bar-geo small"
+				tooltip-class="top"
+				class="search-panel-button">
+			<span class="title">{{geoFilterTitle}}</span>
+		</button>
 
-			<ansyn-combo-box-option *ngFor="let _geoFilter of geoFilters" [value]="_geoFilter">
-				{{ _geoFilter | translate}}
-			</ansyn-combo-box-option>
-
-		</ansyn-combo-box>
+		<ansyn-location-picker
+			*ngIf="locationPickerExpand"
+			[geoFilter]="geoFilterTitle">
+		</ansyn-location-picker>
 	</div>
 
 	<!-- data input filter-->
