Upgrading primeng (but still give ivy error?)

--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -4,7 +4,8 @@
 @import 'icons.css';
 @import 'tooltip.css';
 @import "~primeng/resources/primeng.min.css";
-@import "~primeng/resources/themes/omega/theme.css";
+@import "~primeng/resources/themes/luna-amber/theme.css";
+/* Todo: primeng theme was omega. But omega did not exist after upgrading primeng for ng9 */
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~cesium/Build/Cesium/Widgets/widgets.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
