uploading new imagery status bar

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -39,9 +39,25 @@
 			}
 		}
 
+		i.small {
+			font-size: 0.6em;
+		}
+
 		.icon::before {
 			vertical-align: middle;
 			display: block;
+		}
+	}
+
+	div.more-buttons {
+		background: @background-color-3;
+		width: 220px;
+		height: 75px;
+		margin-top: 35px;
+		z-index: 0;
+
+		button {
+			font-size: 13px;
 		}
 	}
 }
