--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
@@ -24,36 +24,33 @@
 @contrast: 5%;
 
 :host {
-	width: 0;
+	width: @tools-box-width;
 	height: @tools-box-height;
 	position: absolute;
-	top: -7px;
-	right: 0;
+	top: 51px;
+	left: -178px;
 	transform: translateX(100%);
 	background: @background-color-3;
 	transition-property: width;
 	transition-duration: 0.1s;
 	transition-delay: 0s;
-	z-index: @z-index-image-processing-control;
+	z-index: 0;
 	color: white;
 
-	&.expand {
-		width: @tools-box-width;
-		height: @tools-box-height;
+	div.image-processing-container {
+		padding: 0 20px;
+		visibility: visible;
 		transition-delay: 0.1s;
-
-		div.image-processing-container {
-			padding: 0 20px;
-			visibility: visible;
-			transition-delay: 0.1s;
-			display: flex;
-			flex-direction: column;
-		}
+		display: flex;
+		flex-direction: column;
 	}
 
 	div.image-processing-container {
 		transition-delay: 0.05s;
-		visibility: hidden;
+		visibility: visible;
+		padding: 0 20px;
+		display: flex;
+		flex-direction: column;
 
 		.title-wrapper {
 			display: flex;
@@ -84,6 +81,7 @@
 			li {
 				list-style-type: none;
 				font-size: 12px;
+				height: 20px;
 				margin-bottom: 16px;
 
 				.input-wrapper {
