--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -1,26 +1,3 @@
-<button class="small-icon-button set-preset" *ngIf="overlay "
-
-		(click)="togglePreset()"
-		[disabled]="noGeoRegistration"
-		[attr.tooltip-value]="presetsButtonText | translate"
-		tooltip-class="bottom right">
-	<i class="icon icon-quick-loop-add" [class.active]="isPreset"></i>
-</button>
-
-<button class="small-icon-button remove-overlay" *ngIf="overlay "
-		(click)="removeOverlay()"
-		[attr.tooltip-value]="isRemoved ? ('Restore overlay' | translate) : ('Remove overlay' | translate)"
-		tooltip-class="bottom right">
-	<i class="icon" [ngClass]="isRemoved ? 'icon-restore-overlay' : 'icon-remove-overlay'"></i>
-</button>
-<button class="small-icon-button set-favorite" *ngIf="overlay"
-		(click)="toggleFavorite()"
-		[attr.tooltip-value]="favoritesButtonText | translate"
-		tooltip-class="bottom right">
-	<i class="icon" [ngClass]="!isFavorite? 'icon-favorite-empty' : 'icon-favorite-full'"
-	   [class.active]="isFavorite"></i>
-</button>
-
 <button class="small-icon-button drag-mode" *ngIf="overlay"
 		(click)="toggleDragged()"
 		[disabled]="!isLayersVisible || noGeoRegistration"
@@ -28,3 +5,78 @@
 		tooltip-class="bottom right">
 	<i class="icon-drag-annotations" [class.active]="isDragged"></i>
 </button>
+
+<button tooltip-class="bottom right"
+		*ngIf="overlay"
+		class="small-icon-button"
+		[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
+		(click)="toggleAutoImageProcessing()"
+		[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"
+		[disabled]="imageProcessingDisabled">
+	<i class="icon-automatic-image-processing" [class.active]="isAutoProcessing"></i>
+</button>
+
+<button tooltip-class="bottom right"
+		*ngIf="overlay"
+		class="small-icon-button"
+		[attr.tooltip-value]="'Manual Image Enhancement' | translate"
+		(click)="toggleSubMenu(subMenuEnum.manualImageProcessing)"
+		[class.mode-on]="isImageControlActive && !imageManualProcessingDisabled"
+		[class.active]="isExpand(subMenuEnum.manualImageProcessing) && !imageManualProcessingDisabled"
+		[disabled]="imageManualProcessingDisabled">
+	<i class="icon-tools-image-processing" [class.active]="isManualProcessing"></i>
+</button>
+<ansyn-image-processing-control
+	*ngIf="isManualProcessing">
+</ansyn-image-processing-control>
+
+<button class="small-icon-button" *ngIf="overlay"
+		(click)="toggleImageryPerspective()"
+		[attr.tooltip-value]="'Perspective' | translate"
+		tooltip-class="bottom right">
+	<i class="icon icon-status-bar-orientation small" [class.active]="perspective"></i>
+</button>
+
+<button class="small-icon-button" *ngIf="overlay"
+		(click)="toggleMoreButtons()"
+		[attr.tooltip-value]="'More buttons' | translate"
+		tooltip-class="bottom right">
+	<i class="icon icon-app-next" [class.active]="moreButtons"></i>
+</button>
+
+<!--<ansyn-combo-box-->
+<!--	[buttonClass]="'rtl' === ('direction' | translate) ? 'search-panel-button-left' : 'search-panel-button-right'"-->
+<!--	icon="icon icon-status-bar-orientation small"-->
+<!--	direction="top"-->
+<!--	name="orientation"-->
+<!--	[withArrow]="false"-->
+<!--	[ngModel]="orientation"-->
+<!--	[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.orientation | translate"-->
+<!--	(ngModelChange)="comboBoxesChange({ orientation: $event })">-->
+
+<!--	<ansyn-combo-box-option *ngFor="let orientation of orientations" [value]="orientation">-->
+<!--		{{ orientation | translate}}-->
+<!--	</ansyn-combo-box-option>-->
+
+<!--</ansyn-combo-box>-->
+
+<div class="more-buttons" *ngIf="moreButtons">
+	<button class="small-icon-button set-preset" *ngIf="overlay && moreButtons"
+			(click)="togglePreset()"
+			[disabled]="noGeoRegistration">
+		<i class="icon icon-quick-loop-add" [class.active]="isPreset"></i>
+		{{presetsButtonText | translate}}
+	</button>
+
+	<button class="small-icon-button remove-overlay" *ngIf="overlay && moreButtons"
+			(click)="removeOverlay()">
+		<i class="icon" [ngClass]="isRemoved ? 'icon-restore-overlay' : 'icon-remove-overlay'"></i>
+		{{isRemoved ? ('Restore overlay' | translate) : ('Remove overlay' | translate)}}
+	</button>
+	<button class="small-icon-button set-favorite" *ngIf="overlay && moreButtons"
+			(click)="toggleFavorite()">
+		<i class="icon" [ngClass]="!isFavorite? 'icon-favorite-empty' : 'icon-favorite-full'"
+		   [class.active]="isFavorite"></i>
+		{{favoritesButtonText | translate}}
+	</button>
+</div>
