uploading new imagery status bar

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -34,7 +34,7 @@
 		(click)="toggleImageryPerspective()"
 		[attr.tooltip-value]="'Perspective' | translate"
 		tooltip-class="bottom right">
-	<i class="icon icon-status-bar-orientation small" [class.active]="perspective"></i>
+	<i class="icon-status-bar-orientation small" [class.active]="perspective"></i>
 </button>
 
 <button class="small-icon-button" *ngIf="overlay"
