uploading new imagery status bar

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
@@ -5,7 +5,9 @@
 	</div>
 	<ul class="image-processing-options">
 		<li *ngFor="let param of params">
-			<label [for]="'image-processing-' + param">{{param.name | translate}}</label><br>
+			<div class="param-info">
+				<label  [for]="'image-processing-' + param">{{param.name | translate}}</label><br><br><br>
+			</div>
 			<div class="input-wrapper">
 				<input [id]="'image-processing-' + param"
 					   type="range"
