--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -11,19 +11,18 @@
 		class="small-icon-button auto-image-processing"
 		[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
 		(click)="toggleAutoImageProcessing()"
-		[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"
-		[disabled]="imageProcessingDisabled">
+		[class.mode-on]="onAutoImageProcessing">
 	<i class="icon-automatic-image-processing" [class.active]="isAutoProcessing"></i>
 </button>
 
 <button tooltip-class="bottom right"
 		*ngIf="overlay"
-		class="small-icon-button manual-image-processing"
+		class="small-icon-button"
 		[attr.tooltip-value]="'Manual Image Enhancement' | translate"
 		(click)="toggleManualImageProcessing()"
-		[class.mode-on]="isImageControlActive && !imageManualProcessingDisabled"
-		[class.active]="!imageManualProcessingDisabled"
-		[disabled]="imageManualProcessingDisabled">
+		[class.mode-on]="isImageControlActive && !onAutoImageProcessing"
+		[class.active]="!onAutoImageProcessing"
+		[disabled]="onAutoImageProcessing">
 	<i class="icon-tools-image-processing" [class.active]="isManualProcessing"></i>
 </button>
 <ansyn-image-processing-control
@@ -32,7 +31,7 @@
 
 <button class="small-icon-button" *ngIf="overlay"
 		(click)="toggleImageryPerspective()"
-		[attr.tooltip-value]="'Perspective' | translate"
+		[attr.tooltip-value]="orientation | translate"
 		tooltip-class="bottom right">
 	<i class="icon-status-bar-orientation small" [class.active]="perspective"></i>
 </button>
