--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -48,7 +48,7 @@
 			(click)="togglePreset()"
 			[disabled]="noGeoRegistration">
 		<i class="icon icon-quick-loop-add" [class.active]="isPreset"></i>
-		<div class="button-title">
+		<div class="button-title preset-title">
 			{{presetsButtonText | translate}}
 		</div>
 	</button>
