--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -63,12 +63,14 @@
 		margin-top: 35px;
 		padding-right: 25px;
 		z-index: 0;
+		text-align: left;
 
 		.button-title {
-			//display: inline-block;
-			float: left;
 			width: 150px;
-			margin-left: 20px;
+		}
+
+		.preset-title {
+			margin-left: 28px;
 		}
 
 		button {
