--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -9,7 +9,7 @@
 <button tooltip-class="bottom right"
 		*ngIf="overlay"
 		class="small-icon-button auto-image-processing"
-		[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
+		[attr.tooltip-value]="'Automatic Processing' | translate"
 		(click)="toggleAutoImageProcessing()"
 		[class.mode-on]="onAutoImageProcessing">
 	<i class="icon-automatic-image-processing" [class.active]="isAutoProcessing"></i>
