--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -12,7 +12,7 @@
 		[attr.tooltip-value]="'Automatic Processing' | translate"
 		(click)="toggleAutoImageProcessing()"
 		[class.mode-on]="onAutoImageProcessing">
-	<i class="icon-automatic-image-processing" [class.active]="isAutoProcessing"></i>
+	<i class="icon-autoimage" [class.active]="isAutoProcessing"></i>
 </button>
 
 <button tooltip-class="bottom right"
