--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -12,7 +12,7 @@
 		[attr.tooltip-value]="'Automatic Processing' | translate"
 		(click)="toggleAutoImageProcessing()"
 		[class.mode-on]="onAutoImageProcessing">
-	<i class="icon-autoimage" [class.active]="isAutoProcessing"></i>
+	<i class="icon-automatic-image-processing" [class.active]="isAutoProcessing"></i>
 </button>
 
 <button tooltip-class="bottom right"
@@ -28,13 +28,6 @@
 <ansyn-image-processing-control
 	*ngIf="isManualProcessing">
 </ansyn-image-processing-control>
-
-<button class="small-icon-button perspective" *ngIf="overlay"
-		(click)="toggleImageryPerspective()"
-		[attr.tooltip-value]="orientation | translate"
-		tooltip-class="bottom right">
-	<i class="icon-status-bar-orientation small" [class.active]="perspective"></i>
-</button>
 
 <button class="small-icon-button more-btn" *ngIf="overlay"
 		(click)="toggleMoreButtons()"
