--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -65,6 +65,16 @@
 				display: block;
 			}
 
+			i {
+				&.active {
+					color: @application-primary-color;
+				}
+			}
+
+			i.small {
+				font-size: 0.6em;
+			}
+
 
 		}
 	}
