move status bar to top

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -4,6 +4,10 @@
 	</div>
 
 	<div class="layer" #animatedElementHorizontal>
+		<div class="status">
+			<ansyn-status-bar></ansyn-status-bar>
+		</div>
+
 		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
