--- a/src/app/@ansyn/ansyn/modules/status-bar/components/location-picker/location-picker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/location-picker/location-picker.component.less
@@ -10,7 +10,7 @@
 	top: 0;
 	min-height: 30px;
 	border-radius: 5px;
-	transform: translateY(calc(-100% - 20px));
+	transform: translateY(calc(100% + 8px));
 	background: @background-color-0;
 
 	span.title {
