--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -4,9 +4,8 @@
 
 :host {
 	position: absolute;
-	top: 0;
 	min-width: 170px;
-	transform: translateY(calc(~'-100%'));
+	transform: translateY(8px);
 
 	/deep/ .treeview-container {
 		overflow-y: hidden !important;
