--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -28,8 +28,12 @@
 		height: 100%;
 		width: 100%;
 		overflow: hidden;
+		flex-direction: row;
 		background: @background-color-0;
 
+		div.menu {
+			flex-shrink: 1;
+		}
 		div.layer {
 			width: 100%;
 			height: 100%;
@@ -39,9 +43,15 @@
 			overflow: hidden;
 			position: relative;
 
+			.status {
+				position: relative;
+				top: 0;
+				height: @status-bar-height;
+				z-index: @z-index-status-bar-navigation-area;
+			}
 			.maps-container {
 				position: relative;
-				flex: 1;
+				flex-grow: 1;
 			}
 
 		}
