--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
@@ -1,10 +1,7 @@
-<div class="display-panel" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
-
-	<!-- Layout -->
-	<div class="box">
+<div class="display-panel">
 		<ansyn-combo-box
-			[buttonClass]="'rtl' === ('direction' | translate) ? 'search-panel-button-right' : 'search-panel-button-left'"
-			direction="top"
+			buttonClass="button"
+			direction="bottom"
 			name="layout"
 			[withArrow]="false"
 			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.screenNumber | translate"
@@ -17,25 +14,4 @@
 
 
 		</ansyn-combo-box>
-	</div>
-
-
-	<!-- Orientation -->
-	<div class="box">
-		<ansyn-combo-box
-			[buttonClass]="'rtl' === ('direction' | translate) ? 'search-panel-button-left' : 'search-panel-button-right'"
-			icon="icon icon-status-bar-orientation small"
-			direction="top"
-			name="orientation"
-			[withArrow]="false"
-			[ngModel]="orientation"
-			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.orientation | translate"
-			(ngModelChange)="comboBoxesChange({ orientation: $event })">
-
-			<ansyn-combo-box-option *ngFor="let orientation of orientations" [value]="orientation">
-				{{ orientation | translate}}
-			</ansyn-combo-box-option>
-
-		</ansyn-combo-box>
-	</div>
 </div>
