--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,8 +1,7 @@
-<div class="status-bar" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
+<div class="status-bar">
 
 	<ansyn-search-panel></ansyn-search-panel>
 	<ansyn-display-panel></ansyn-display-panel>
 	<ansyn-case-panel></ansyn-case-panel>
 
 </div>
-<ansyn-navigation-bar></ansyn-navigation-bar>
