move navigation-bar to overlay module

--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
@@ -9,6 +9,7 @@
 	</button>
 
 	<div class="app-timeline-container">
+		<ansyn-overlay-navigation-bar></ansyn-overlay-navigation-bar>
 		<ansyn-overlays-container></ansyn-overlays-container>
 	</div>
 </div>
