--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/results-table/results-table.component.less
@@ -22,8 +22,9 @@ div.results-table {
 				width: 100%;
 				height: 57px;
 				text-align: left;
+				cursor: pointer;
 				box-sizing: border-box;
-				//border-bottom: 1px solid;
+
 				div.results-table-head-col {
 					flex: 1;
 				}
