Status bar redesign2 (#3051)
* move status bar to top

* move navigation-bar to overlay module

* switch to event.key as event.which is deprecated

* testing

* cr

--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
@@ -8,11 +8,8 @@
 		<i class="fa fa-caret-down" [class.fa-caret-up]="collapse"></i>
 	</button>
 
-	<div class="status">
-		<ansyn-status-bar></ansyn-status-bar>
-	</div>
-
 	<div class="app-timeline-container">
+		<ansyn-overlay-navigation-bar></ansyn-overlay-navigation-bar>
 		<ansyn-overlays-container></ansyn-overlays-container>
 	</div>
 </div>
