:ambulance: hot fix status bar go left on menu pin

--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
@@ -6,7 +6,7 @@
 			[isActive]="optionsVisible"
 			[attr.tooltip-value]="comboBoxToolTipDescription || null"
 			[withArrow]="withArrow"
-			tooltip-class="top"
+			[attr.tooltip-class]="direction"
 			[icon]="icon"
 			(click)="toggleShow()">
 		<div class="render" [innerHTML]="renderSelected"></div>
