--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -34,21 +34,24 @@
 		div.menu {
 			flex-shrink: 1;
 		}
+		div.status {
+			position: absolute;
+			top: 0;
+			left: @menu-width;
+			width: calc(100% - @menu-width);
+			height: @status-bar-height;
+			z-index: @z-index-status-bar-navigation-area;
+		}
+
 		div.layer {
 			width: 100%;
-			height: 100%;
+			height: calc(100% - @status-bar-height);
+			top: @status-bar-height;
 			color: white;
 			display: flex;
 			flex-direction: column;
 			overflow: hidden;
 			position: relative;
-
-			.status {
-				position: relative;
-				top: 0;
-				height: @status-bar-height;
-				z-index: @z-index-status-bar-navigation-area;
-			}
 			.maps-container {
 				position: relative;
 				flex-grow: 1;
