--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -12,12 +12,13 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	color: white;
 
 	.status-bar {
 		display: flex;
 		flex: 1;
 
-		/deep/ i.icon, span.title{
+		/deep/ i.icon, span.title {
 			margin: 0 5px;
 		}
 	}
