--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -15,7 +15,7 @@
 		<div class="results-table-body-row"
 			 *ngFor="let overlay of overlays"
 			 (click)="openOverlay(overlay)"
-			 (mouseenter)="onMouseOver(overlay.id)"
+			 (mouseenter)="onMouseOver($event, overlay.id)"
 			 (mouseleave)="onMouseOut()"
 			 [class.selected]="selectedOverlayId === overlay.id">
 
@@ -36,9 +36,6 @@
 					<i class="icon icon-app-next"></i>
 				</div>
 
-				<ansyn-overlay-overview>
-
-				</ansyn-overlay-overview>
 			</div>
 		</div>
 
