--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -4,25 +4,12 @@
 @import 'icons.css';
 @import 'tooltip.css';
 @import "~primeng/resources/primeng.min.css";
-@import "~primeng/resources/themes/luna-amber/theme.css";
+/*@import "~primeng/resources/themes/luna-amber/theme.css";*/
 /* Todo: primeng theme was omega. But omega did not exist after upgrading primeng for ng9 */
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~cesium/Build/Cesium/Widgets/widgets.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "~@ansyn/ng-pick-datetime/assets/style/picker.min.css";
-
-/* undo PrimeNG's global change */
-* {
-	-moz-box-sizing: initial;
-	-webkit-box-sizing: initial;
-	box-sizing: initial;
-}
-/* re-apply only for PrimeNG elements */
-[class^="ui-"] {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
 
 circle.drop.selected {
 	fill: black;
