--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -36,6 +36,7 @@
 			display: flex;
 
 			div.results-table-head-row {
+				margin-bottom: -5px;
 				padding: 0 15px;
 				width: 100%;
 
@@ -78,7 +79,7 @@
 			}
 
 			div.results-table-body-row:first-child div.results-table-body-row-data {
-				border-top: 1px solid #EBF8FA;
+				//border-top: 1px solid #EBF8FA;
 			}
 
 			div.results-table-body-row {
