fix Year field discovery

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.less
@@ -2,7 +2,7 @@
 
 :host {
 	position: absolute;
-	top: 50px;
+	top: @status-bar-height;
 	transform: translateY(-100%);
 
 	input.time-picker-input {
